--- a/src/css/light.css
+++ b/src/css/light.css
@@ -1,22 +1,24 @@
 :root {
   /* colors */
-  --main-color: #ccc;
-  --main-text-color: #000;
+  --main-color: #fdf6e3;
+  --main-text-color: #657b83;
   --checkboard-color: #fff;
   --main-font: Arial, Helvetica, sans-serif;
-  --accent-color: #2196F3;
-  --accent-text-color: #fff;
+  --accent-color: #cb4b16;
+  --accent-text-color: #fdf6e3;
   --main-color-lighter: #ddd;
-  --text-area-bg-color: rgba(230, 230, 230, 0.9);
-  --text-area-text-color: black;
-  --widget-color: rgba(220, 220, 220, 0.7);
-  --widget-border-color: #aaa;
-  --widget-hover-color: rgba(230, 230, 230, 0.7);
-  --widget-pressed-color: rgba(190, 190, 190, 0.7);
-  --widget-pressed-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2) inset;
-  --widget-gradient-stop: 20%;
+  --text-area-bg-color: #fdf6e3;
+  --text-area-text-color: #586e75;
+  --widget-color: #fdf6e3;
+  --widget-border-color: #b58900;
+  --widget-hover-color: #eee8d5;
+  --widget-pressed-color: #eee8d5;
+  --widget-pressed-text-color: #cb4b16;
+  --widget-pressed-shadow: none;
+  --widget-gradient-stop: 0%;
   /* placement */
-  --default-rounding: 3px;
+  --default-rounding: 0px;
+  --default-shadow: 2px 0px 16px 0px #839496;
   --default-margin: 4px;
-  --widget-padding: 8px;
+  --widget-padding: 6px;
 }
