--- a/src/css/light.css
+++ b/src/css/light.css
@@ -1,6 +1,6 @@
 :root {
   /* colors */
-  --main-color: #fdf6e3;
+  --main-color: #e4e0d3;
   --main-text-color: #657b83;
   --checkboard-color: #fff;
   --main-font: Arial, Helvetica, sans-serif;
